<resources>
    <string name="app_name">Ometely</string>
    <string name="OMETELY">OMETELY</string>
    <string name="Peperonni">ПЕППЕРОНИ</string>
    <string name="Description_pepperoni">Класическй рецепт пепперони с аппетитными колбасками пепперони и сыром моцарелла</string>
    <string name="Buy_pepperoni">Купить. Цена: 300 руб</string>
    <string name="Calzone">Кальцоне</string>
    <string name="Description_calzone">Сочная Кальцоне со свежими грибами, аппетитными помидорами черри и оливками</string>
    <string name="Buy_calzone">Купить. Цена: 380 руб</string>
    <string name="Quattro_stagioni">Четыре сезона</string>
    <string name="Description_quattro_stagioni">Эта пицца идеально подойдёт для  тех, кто считает что пицца прекрасна и удивительна в своем многообразии</string>
    <string name="Buy_quattro_stagioni">Купить. Цена: 400 руб</string>
    <string name="Quattro_formaggi">Четыре сыра</string>
    <string name="Description_quattro_formaggi">Классичсекий рецепт из моцарелла, пармезана, сыра горгонзола и артишоки не оставит равнодушных</string>
    <string name="Buy_quattro_formaggi">Купить. Цена: 350 руб</string>
    <string name="Mexican">Мексиканская</string>
    <string name="Description_mexican">Острая пицца прямиком из мексики c усочками перца чили подойдет для любит по острее</string>
    <string name="Buy_mexican">Купить. Цена: 430 руб</string>
    <string name="BusckeItem">В корзине 0 пицц</string>
    <string name="OrderText1">В корзине </string>
    <string name="OrderText2Null"> пицц</string>
    <string name="OrderText2One"> пицца</string>
    <string name="OrderText2Two"> пиццы</string>
    <string name="LogintHint">Введите email</string>
    <string name="PasswordHint">Введите пароль</string>
    <string name="LoginB">Войти</string>
    <string name="error">ERROR</string>
    <string name="IfAdmin">Войти как менеджер</string>
    <string name="backetCaps">КОРЗИНА</string>
    <string name="basketCapsEn">BASKET</string>
    <string name="Comment_for_deliver">Коментраии к доствке</string>
    <string name="room">Квартира</string>
    <string name="level">Этаж</string>
    <string name="porch">Подъезд</string>
    <string name="house_full">Дом(корпус,здание)</string>
    <string name="street">Улица</string>
    <string name="name">Ваше имя</string>
    <string name="fill_data_for_delivery">Заполните данные для доставки</string>
    <string name="house">Дом</string>
    <string name="phone_number">Введите ваш номер телефона</string>
    <string name="error_final">Убедитесь что все поля заполнены</string>
    <string name="addCook">Добавить повара</string>
    <string name="addDeliver">Добавить курьера</string>
    <string name="loginAsAguest">Войти как гость</string>
    <string name="loginAsAWorker">Войти как работник</string>
    <string name="addManager">Добавить менеджера</string>
</resources>
