<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back"
    tools:context="LoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:background="@drawable/red_top_background"
            android:fontFamily="@font/main_name"
            android:gravity="center"
            android:paddingBottom="9sp"
            android:text="@string/OMETELY"
            android:textColor="@color/white"
            android:textSize="38sp" />

        <ImageView
            android:id="@+id/PizzaMonster"
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/pizza_monstr_log"
            android:onClick="onClick"/>

        <EditText
            android:id="@+id/LoginText"
            android:layout_width="196sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:background="@drawable/log_pass"
            android:gravity="center"
            android:hint="@string/LogintHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/PasswordText"
            android:layout_width="196sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="12sp"
            android:background="@drawable/log_pass"
            android:gravity="center"
            android:hint="@string/PasswordHint"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <CheckBox
                android:id="@+id/admin"
                android:layout_marginTop="1sp"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:button="@drawable/check_box_but"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IfAdmin"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/white"/>


        </LinearLayout>


        <TextView
            android:id="@+id/Error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:layout_width="196sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="@drawable/button_login"
            android:hint="@string/LoginB"
            android:textColorHint="@color/white"
            android:onClick="Login"/>

    </LinearLayout>

</LinearLayout>