<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    android:id="@+id/holaaa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:background="@drawable/red_top_background">

        <ImageButton
            android:layout_gravity="center"
            android:layout_marginStart="18sp"
            android:layout_width="35sp"
            android:layout_height="30sp"
            android:background="@drawable/exit1"
            android:onClick="logout"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:fontFamily="@font/main_name"
            android:gravity="center"
            android:layout_marginStart="50sp"
            android:paddingBottom="9sp"
            android:text="@string/OMETELY"
            android:textColor="@color/white"
            android:textSize="38sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/text21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basketCapsEn"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="@font/test2"/>



    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerview"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_for_data_check"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fill_data_for_delivery"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_below="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2sp"
                    android:text="@string/name"
                    android:id="@+id/text2"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <EditText
                    android:layout_below="@id/text2"
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:backgroundTint="@color/red_for_text_like_a_top_red"/>

                <TextView
                    android:layout_below="@id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2sp"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:id="@+id/text3"/>

                <EditText
                    android:layout_below="@+id/text3"
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:backgroundTint="@color/red_for_text_like_a_top_red"/>

                <TextView
                    android:layout_below="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/street"
                    android:id="@+id/text4"
                    android:layout_marginStart="2sp"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <EditText
                    android:layout_below="@+id/text4"
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street"
                    android:backgroundTint="@color/red_for_text_like_a_top_red"/>

                <TextView
                    android:id="@+id/text5"
                    android:layout_below="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/house_full"
                    android:layout_marginStart="2sp"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <EditText
                    android:layout_below="@+id/text5"
                    android:id="@+id/home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red_for_text_like_a_top_red"
                    android:layout_marginStart="2sp"
                    android:hint="@string/house"/>

                <CheckBox
                    android:layout_below="@+id/home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Я живу в частном доме"
                    android:textColorHint="@color/black"
                    android:id="@+id/privateHous"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/porch"
                    android:layout_below="@+id/privateHous"
                    android:id="@+id/porchText"
                    android:textColor="@color/black"
                    android:layout_marginStart="2sp"
                    android:textSize="15sp"/>

                <EditText
                    android:layout_below="@+id/porchText"
                    android:id="@+id/porch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/porch"
                    android:backgroundTint="@color/red_for_text_like_a_top_red"/>

                <TextView
                    android:layout_below="@+id/porch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    android:id="@+id/levelT"
                    android:textColor="@color/black"
                    android:layout_marginStart="2sp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/level"
                    android:layout_below="@id/levelT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/level"
                    android:backgroundTint="@color/red_for_text_like_a_top_red"/>

                <TextView
                    android:layout_below="@id/level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/room"
                    android:id="@+id/roomT"
                    android:layout_marginStart="2sp"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/room"
                    android:layout_below="@id/roomT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/room"
                    android:backgroundTint="@color/red_for_text_like_a_top_red"/>


                <TextView
                    android:layout_below="@+id/room"
                    android:id="@+id/buyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginStart="2sp"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_below="@+id/buyText"
                    android:id="@+id/errorview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red_for_text_like_a_top_red"
                    android:textSize="14sp"
                    android:gravity="center"/>

                <Button
                    android:layout_below="@+id/errorview"
                    android:layout_centerHorizontal="true"
                    android:onClick="finish_check"
                    android:layout_gravity="center"
                    android:layout_width="200sp"
                    android:layout_height="25sp"
                    android:background="@drawable/pizza_back"
                    android:hint="Оформить заказ"
                    android:layout_marginTop="12sp"
                    android:textColorHint="@color/white"
                    android:layout_marginBottom="8sp"/>

            </RelativeLayout>
    </ScrollView>

</LinearLayout>