<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatalogPage"
    android:background="@drawable/back"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:background="@drawable/red_top_background">

            <ImageButton
                android:layout_gravity="center"
                android:layout_marginStart="18sp"
                android:layout_width="35sp"
                android:layout_height="30sp"
                android:background="@drawable/exit1"
                android:onClick="logout"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:fontFamily="@font/main_name"
                android:gravity="center"
                android:layout_marginStart="50sp"
                android:paddingBottom="9sp"
                android:text="@string/OMETELY"
                android:textColor="@color/white"
                android:textSize="38sp" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2sp"
                android:background="@drawable/pizza_button_background"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="135sp"
                    android:layout_height="130sp"
                    android:layout_marginStart="8sp"
                    android:layout_marginTop="6sp"
                    android:layout_marginBottom="6sp"
                    android:background="@drawable/pepperoni" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12sp"
                        android:fontFamily="@font/pizza_name"
                        android:gravity="center"
                        android:text="@string/Peperonni"
                        android:textColor="@color/black"
                        android:textSize="28sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1sp"
                        android:gravity="center"
                        android:paddingStart="3sp"
                        android:paddingEnd="3sp"
                        android:text="@string/Description_pepperoni"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/PepperoniButton"
                        android:layout_width="190sp"
                        android:layout_height="36sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        android:layout_marginBottom="7sp"
                        android:background="@drawable/buy_button"
                        android:hint="@string/Buy_pepperoni"
                        android:onClick="PepperoniClick"
                        android:paddingStart="30sp"
                        android:paddingEnd="30sp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:background="@drawable/pizza_button_background"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="135sp"
                    android:layout_height="130sp"
                    android:layout_marginStart="8sp"
                    android:layout_marginTop="6sp"
                    android:layout_marginBottom="6sp"
                    android:background="@drawable/calzone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12sp"
                        android:fontFamily="@font/pizza_name"
                        android:gravity="center"
                        android:text="@string/Calzone"
                        android:textColor="@color/black"
                        android:textSize="28sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1sp"
                        android:gravity="center"
                        android:paddingStart="3sp"
                        android:paddingEnd="3sp"
                        android:text="@string/Description_calzone"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/Calzone"
                        android:layout_width="190sp"
                        android:layout_height="36sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        android:layout_marginBottom="7sp"
                        android:background="@drawable/buy_button"

                        android:hint="@string/Buy_calzone"
                        android:onClick="CalzoneClick"
                        android:paddingStart="30sp"
                        android:paddingEnd="30sp"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7sp"
                android:background="@drawable/pizza_button_background"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="135sp"
                    android:layout_height="130sp"
                    android:layout_marginStart="8sp"
                    android:layout_marginTop="6sp"
                    android:layout_marginBottom="6sp"
                    android:background="@drawable/quattro_stagioni" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:fontFamily="@font/pizza_name"
                        android:gravity="center"
                        android:lineSpacingExtra="3sp"
                        android:text="@string/Quattro_stagioni"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1sp"
                        android:gravity="center"
                        android:paddingStart="3sp"
                        android:paddingEnd="3sp"
                        android:text="@string/Description_quattro_stagioni"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/QuattroStagioni"
                        android:layout_width="190sp"
                        android:layout_height="36sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="2sp"
                        android:layout_marginBottom="7sp"
                        android:background="@drawable/buy_button"

                        android:hint="@string/Buy_pepperoni"
                        android:onClick="QuattroStagioniClick"
                        android:paddingStart="30sp"
                        android:paddingEnd="30sp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:background="@drawable/pizza_button_background"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="140sp"
                    android:layout_height="135sp"
                    android:layout_marginStart="8sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginBottom="6sp"
                    android:background="@drawable/quattro_formaggi" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12sp"
                        android:fontFamily="@font/pizza_name"
                        android:gravity="center"
                        android:text="@string/Quattro_formaggi"
                        android:textColor="@color/black"
                        android:textSize="27sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1sp"
                        android:gravity="center"
                        android:paddingStart="3sp"
                        android:paddingEnd="3sp"
                        android:text="@string/Description_quattro_formaggi"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/QuattroFormaggi"
                        android:layout_width="190sp"
                        android:layout_height="36sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="6sp"
                        android:layout_marginBottom="7sp"
                        android:background="@drawable/buy_button"

                        android:hint="@string/Buy_quattro_formaggi"
                        android:onClick="QuattroFormaggiClick"
                        android:paddingStart="30sp"
                        android:paddingEnd="30sp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:background="@drawable/pizza_button_background"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/backet"
                    android:layout_width="135sp"
                    android:layout_height="130sp"
                    android:layout_marginStart="8sp"
                    android:layout_marginTop="6sp"
                    android:layout_marginBottom="6sp"
                    android:background="@drawable/mexican" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12sp"
                        android:fontFamily="@font/pizza_name"
                        android:gravity="center"
                        android:text="@string/Mexican"
                        android:textColor="@color/black"
                        android:textSize="26sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1sp"
                        android:gravity="center"
                        android:paddingStart="3sp"
                        android:paddingEnd="3sp"
                        android:text="@string/Description_mexican"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/MexicanId"
                        android:layout_width="190sp"
                        android:layout_height="36sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        android:layout_marginBottom="7sp"
                        android:background="@drawable/buy_button"
                        android:hint="@string/Buy_mexican"
                        android:onClick="MexicanClick"
                        android:paddingStart="30sp"
                        android:paddingEnd="30sp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="50sp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/niz"
        android:layout_width="match_parent"
        android:layout_height="47sp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">


        <ImageButton
            android:layout_marginTop="1sp"
            android:layout_marginStart="10sp"
            android:layout_gravity="center_vertical"
            android:layout_height="38sp"
            android:layout_width="48sp"
            android:onClick="goToBacket"
            android:background="@drawable/shopingbag"/>
        <TextView
            android:id="@+id/TextDown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/BusckeItem"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/bascet"
            android:textSize="34sp"/>


    </LinearLayout>

</RelativeLayout>